Added front page title

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+	<!-- Start of container -->
 	<div class="container">
 		<!-- Start of navigation -->
 		<nav>
@@ -36,8 +39,16 @@
 		</nav>
 		<!-- End of navigation -->
 		
+		<!-- Start of page title -->
+		<div class="title">
+			<h1 class="font-rubik">Your wish and my camera</h1>
+			<p class="subtitle font-rubik">It all starts with an idea</p>
+		</div>
+		<!-- End of page title -->
+		
 	</div>
-	
+	<!-- End of container -->
+
 	<!-- Include javascript files -->
 	<script src="javascript/app.js"></script>
 </body>
