Added portfolio introduction

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<nav>
 			<!-- Logo -->
 			<div class="logo font-poppins">
-				ZYGI STUDIOS.
+				<a href="#" title="Home page">ZYGI STUDIOS.</a>
 			</div>
 
 			<!-- Nav links -->
@@ -39,13 +39,65 @@
 		</nav>
 		<!-- End of navigation -->
 		
+
 		<!-- Start of page title -->
 		<div class="title">
 			<h1 class="font-rubik">Your wish and my camera</h1>
 			<p class="subtitle font-rubik">It all starts with an idea</p>
 		</div>
 		<!-- End of page title -->
-		
+		<!-- Start of page content wrapper -->
+		<div class="content-wrapper">
+			<!-- Start of introduction content -->
+			<div class="me-content">
+				<!-- Start of left container -->
+				<div class="left-container">
+					<div class="img-wrapper intro-picture mobile-hide">
+						<img src="images/me.jpg" alt="Picture of me">
+					</div>
+				</div>
+				<!-- End of left container -->
+				<!-- Start of right container -->
+				<div class="right-container">
+					<!-- First row videos -->
+					<div class="videos-intro">
+						<!-- Video #1 -->
+						<div class="video-wrapper">
+							<iframe src="https://www.youtube.com/embed/8LKkbqSvcTc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
+						<!-- Video #2 -->
+						<div class="video-wrapper mobile-hide">
+							<iframe src="https://www.youtube.com/embed/mDzWy0Z4RPM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
+					</div>
+					<!-- Second row blogs -->
+					<div class="blogs-intro">
+						<!-- Blog #1 -->
+						<div class="img-wrapper thumbnail">
+							<img src="images/blog-thumbnail.jpg" alt="">
+							<div class="additional font-rubik">
+								<h3>Check out my latest blog!</h3>
+								<p>My journey to Gran Canaria</p>
+								<a href="#">Read More</a>
+							</div>
+						</div>
+						<!-- Blog #2 -->
+						<div class="img-wrapper thumbnail">
+							<img src="images/gear-thumbnail.jpg" alt="">
+
+							<div class="additional font-rubik">
+								<h3>Interested in my gear?</h3>
+								<p>Click here to find more</p>
+								<a href="#">Find out more</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- End of right container -->
+			</div>
+			<!-- End of introduction content -->
+		</div>
+		<!-- End of page content wrapper -->
 	</div>
 	<!-- End of container -->
 
