Added about me section

--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
 				<!-- End of right container -->
 			</div>
 			<!-- End of introduction content -->
+			<!-- Start of info -->
+			<div class="info">
+				<h2 class="about-me font-poppins">About me</h2>
+				<!-- Wrapper for info columns -->
+				<div class="info-columns">
+					<!-- Column 1: A little about me -->
+					<div class="info-col1">
+						<h3 class="font-rubik info-h3">Interested in what you've seen? Check out more!</h3>
+						<a href="#" class="portfolio-button font-poppins">Portfolio</a>
+					</div>
+					<!-- Column 2: Link to portfolio -->
+					<div class="info-col2">
+						<h3 class="font-rubik info-h3">Hey, guys!</h3>
+						<p class="font-poppins">My name is Zygimantas Buvarskis and I am a filmmaker. I love travelling and using my camera to capture the most beautiful moments. Lorem ipsum dolor sit amet. Wanna know more? Get in touch!</p>
+					</div>
+					<!-- Column 3: Services -->
+					<div class="info-col3">
+						<h3 class="font-rubik info-h3">Services?</h3>
+						<p class="font-poppins"><span class="service-title">Production.</span> I can use my experience and background to bring your ideas to life.</p>
+						<p class="font-poppins"><span class="service-title">Editing.</span> With my editing knowledge, I can edit any video length in a variety of styles.</p>
+					</div>
+				</div>
+			</div>
+			<!-- End of info -->
 		</div>
 		<!-- End of page content wrapper -->
 	</div>
