Added timeline on the front page

--- a/index.html
+++ b/index.html
@@ -120,6 +120,49 @@
 				</div>
 			</div>
 			<!-- End of info -->
+			<!-- Start of timeline section -->
+			<div class="timeline-section">
+				<h2 class="timeline-title font-poppins">Travel timeline</h2>
+				<div class="timeline">
+					<div class="timeline-container">
+						<div class="timeline-content font-poppins read-more-button">
+							<h3>The beautiful Gran Canaria</h3>
+							<p class="font-poppins read-more-text">This was one of the best trips I've had with my family. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, ea! Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Read more about it in my <a href="#">blog!</a></p>
+						</div>
+						<div class="time font-rubik">
+							<p>June 26, 2099</p>
+						</div>
+					</div>
+					<div class="timeline-container">
+						<div class="timeline-content font-poppins read-more-button">
+							<h3>Had the time of my life at Lanzarote!</h3>
+							<p class="font-poppins read-more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, sunt blanditiis voluptas dignissimos adipisci facere modi eveniet illum consequuntur consectetur ad itaque nulla repellat sequi?<a href="#">blog!</a></p>
+						</div>
+						<div class="time font-rubik">
+							<p>June 26, 2099</p>
+						</div>
+					</div>
+					<div class="timeline-container">
+						<div class="timeline-content font-poppins read-more-button">
+							<h3>The beautiful Gran Canaria</h3>
+							<p class="font-poppins read-more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ut cum sint quibusdam non necessitatibus maxime, cumque asperiores dicta totam harum quos natus! Porro praesentium debitis nulla amet aut nemo, rerum est impedit! Ducimus nulla corporis magnam nesciunt aliquid ad saepe id necessitatibus asperiores accusamus odio vitae laudantium, illo deleniti! <a href="#">blog!</a></p>
+						</div>
+						<div class="time font-rubik">
+							<p>June 26, 2099</p>
+						</div>
+					</div>
+					<div class="timeline-container">
+						<div class="timeline-content font-poppins read-more-button">
+							<h3>The beautiful Gran Canaria</h3>
+							<p class="font-poppins read-more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus excepturi dicta nobis nesciunt iusto ad neque corporis atque, hic odit veritatis exercitationem. Eligendi velit laborum accusantium nostrum exercitationem, molestiae eveniet eaque expedita alias iste aspernatur error saepe nobis officiis esse minima magni magnam labore est libero quo, similique animi doloribus porro nam. Quia error, cum vel aperiam illum reprehenderit quas.<a href="#">blog!</a></p>
+						</div>
+						<div class="time font-rubik">
+							<p>June 26, 2099</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- End of timeline section -->
 		</div>
 		<!-- End of page content wrapper -->
 	</div>
