Added social media footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Zygi Studios</title>
 	<!-- CSS stylesheet -->
 	<link rel="stylesheet" href="styles/css.css">
+	<!-- Fontawesome library -->
+	<script src="https://kit.fontawesome.com/3ade8de4ba.js" crossorigin="anonymous"></script>
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -87,7 +89,7 @@
 
 							<div class="additional font-rubik">
 								<h3>Interested in my gear?</h3>
-								<p>Click here to find more</p>
+								<p>Click here to learn more</p>
 								<a href="#">Find out more</a>
 							</div>
 						</div>
@@ -124,6 +126,7 @@
 			<div class="timeline-section">
 				<h2 class="timeline-title font-poppins">Travel timeline</h2>
 				<div class="timeline">
+					<!-- Timeline event -->
 					<div class="timeline-container">
 						<div class="timeline-content font-poppins read-more-button">
 							<h3>The beautiful Gran Canaria</h3>
@@ -133,6 +136,7 @@
 							<p>June 26, 2099</p>
 						</div>
 					</div>
+					<!-- Timeline event -->
 					<div class="timeline-container">
 						<div class="timeline-content font-poppins read-more-button">
 							<h3>Had the time of my life at Lanzarote!</h3>
@@ -142,6 +146,7 @@
 							<p>June 26, 2099</p>
 						</div>
 					</div>
+					<!-- Timeline event -->
 					<div class="timeline-container">
 						<div class="timeline-content font-poppins read-more-button">
 							<h3>The beautiful Gran Canaria</h3>
@@ -151,6 +156,7 @@
 							<p>June 26, 2099</p>
 						</div>
 					</div>
+					<!-- Timeline event -->
 					<div class="timeline-container">
 						<div class="timeline-content font-poppins read-more-button">
 							<h3>The beautiful Gran Canaria</h3>
@@ -167,7 +173,17 @@
 		<!-- End of page content wrapper -->
 	</div>
 	<!-- End of container -->
-
+	<!-- Start of footer -->
+	<div class="footer">
+		<div class="social-media-wrapper">
+			<h3 class="font-rubik">My Socials</h3>
+			<a href="#" title="Instagram"><i class="fab fa-instagram soc-media"></i></a>
+			<a href="#" title="Facebook"><i class="fab fa-facebook-f soc-media"></i></a>
+			<a href="#" title="LinkedIn"><i class="fab fa-linkedin-in soc-media"></i></a>
+			<a href="#" title="YouTube"><i class="fab fa-youtube soc-media"></i></a>
+		</div>
+	</div>
+	<!-- End of footer -->
 	<!-- Include javascript files -->
 	<script src="javascript/app.js"></script>
 </body>
