Added hover effect for each portfolio

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	<title>Zygi Studios</title>
 	<!-- CSS stylesheet -->
 	<link rel="stylesheet" href="styles/css.css">
-	<!-- Fontawesome library -->
-	<script src="https://kit.fontawesome.com/3ade8de4ba.js" crossorigin="anonymous"></script>
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -21,13 +19,13 @@
 		<nav>
 			<!-- Logo -->
 			<div class="logo font-poppins">
-				<a href="#" title="Home page">ZYGI STUDIOS.</a>
+				<a href="index.html" title="Home page">ZYGI STUDIOS.</a>
 			</div>
 
 			<!-- Nav links -->
 			<ul class="nav-links font-poppins">
-				<li class="nav-item active"><a href="#">Home</a></li>
-				<li class="nav-item"><a href="#">Portfolio</a></li>
+				<li class="nav-item active"><a href="index.html">Home</a></li>
+				<li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
 				<li class="nav-item"><a href="#">Blog</a></li>
 				<li class="nav-item"><a href="#">Contact</a></li>
 			</ul>
@@ -186,5 +184,7 @@
 	<!-- End of footer -->
 	<!-- Include javascript files -->
 	<script src="javascript/app.js"></script>
+	<!-- Fontawesome library -->
+	<script src="https://kit.fontawesome.com/3ade8de4ba.js" crossorigin="anonymous"></script>
 </body>
 </html>
