Finished portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,13 @@
 		<!-- Start of page content wrapper -->
 		<div class="content-wrapper">
 			<div class="portf-videos">
+				<!-- Video -->
 				<div class="vid">
 					<div class="img-wrapper">
 						<img src="images/portfolio-thumbnails/gran-canaria.jpg" alt="">
+					</div>
+					<div class="gif-wrapper">
+						<video muted loop autoplay src="images/portfolio-thumbnails/gifs/gran-canaria.mp4"></video>
 					</div>
 					<div class="start-icon">
 						<i class="fas fa-play"></i>
@@ -54,9 +58,22 @@
 						<p class="font-poppins">YouTube</p>
 					</div>
 				</div>
+				<div class="popup">
+					<div class="video-wrapper">
+						<iframe class="iframe-control" src="https://www.youtube.com/embed/mDzWy0Z4RPM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="close-popup">
+						<div class="line"></div>
+						<div class="line"></div>
+					</div>
+				</div>
+				<!-- Video -->
 				<div class="vid">
 					<div class="img-wrapper">
 						<img src="images/portfolio-thumbnails/sardinia.jpg" alt="">
+					</div>
+					<div class="gif-wrapper">
+						<video muted loop autoplay src="images/portfolio-thumbnails/gifs/sardinia.mp4"></video>
 					</div>
 					<div class="start-icon">
 						<i class="fas fa-play"></i>
@@ -66,9 +83,22 @@
 						<p class="font-poppins">YouTube</p>
 					</div>
 				</div>
+				<div class="popup">
+					<div class="video-wrapper">
+						<iframe class="iframe-control" src="https://www.youtube.com/embed/8LKkbqSvcTc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="close-popup">
+						<div class="line"></div>
+						<div class="line"></div>
+					</div>
+				</div>
+				<!-- Video -->
 				<div class="vid">
 					<div class="img-wrapper">
 						<img src="images/portfolio-thumbnails/tenerife.jpg" alt="">
+					</div>
+					<div class="gif-wrapper">
+						<video muted loop autoplay src="images/portfolio-thumbnails/gifs/tenerife.mp4"></video>
 					</div>
 					<div class="start-icon">
 						<i class="fas fa-play"></i>
@@ -78,9 +108,23 @@
 						<p class="font-poppins">YouTube</p>
 					</div>
 				</div>
+				<div class="popup">
+					<div class="video-wrapper">
+						<iframe class="iframe-control" src="https://www.youtube.com/embed/dHeuiqU7PbE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+
+					<div class="close-popup">
+						<div class="line"></div>
+						<div class="line"></div>
+					</div>
+				</div>
+				<!-- Video -->
 				<div class="vid">
 					<div class="img-wrapper">
 						<img src="images/portfolio-thumbnails/crete.jpg" alt="">
+					</div>
+					<div class="gif-wrapper">
+						<video muted loop autoplay src="images/portfolio-thumbnails/gifs/crete.mp4"></video>
 					</div>
 					<div class="start-icon">
 						<i class="fas fa-play"></i>
@@ -90,9 +134,22 @@
 						<p class="font-poppins">YouTube</p>
 					</div>
 				</div>
+				<div class="popup">
+					<div class="video-wrapper">
+						<iframe class="iframe-control" src="https://www.youtube.com/embed/GT6IpX0iSFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="close-popup">
+						<div class="line"></div>
+						<div class="line"></div>
+					</div>
+				</div>
+				<!-- Video -->
 				<div class="vid">
 					<div class="img-wrapper">
 						<img src="images/portfolio-thumbnails/malta.jpg" alt="">
+					</div>
+					<div class="gif-wrapper">
+						<video muted loop autoplay src="images/portfolio-thumbnails/gifs/malta.mp4"></video>
 					</div>
 					<div class="start-icon">
 						<i class="fas fa-play"></i>
@@ -102,9 +159,22 @@
 						<p class="font-poppins">YouTube</p>
 					</div>
 				</div>
+				<div class="popup">
+					<div class="video-wrapper">
+						<iframe class="iframe-control" src="https://www.youtube.com/embed/W1VXuxoPi_c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="close-popup">
+						<div class="line"></div>
+						<div class="line"></div>
+					</div>
+				</div>
+				<!-- Video -->
 				<div class="vid">
 					<div class="img-wrapper">
 						<img src="images/portfolio-thumbnails/lanzarote.jpg" alt="">
+					</div>
+					<div class="gif-wrapper">
+						<video muted loop autoplay src="images/portfolio-thumbnails/gifs/lanzarote.mp4"></video>
 					</div>
 					<div class="start-icon">
 						<i class="fas fa-play"></i>
@@ -112,6 +182,15 @@
 					<div class="video-caption">
 						<h3 class="font-rubik">Lanzarote</h3>
 						<p class="font-poppins">YouTube</p>
+					</div>
+				</div>
+				<div class="popup">
+					<div class="video-wrapper">
+						<iframe class="iframe-control" src="https://www.youtube.com/embed/8Es7a3OU3uU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="close-popup">
+						<div class="line"></div>
+						<div class="line"></div>
 					</div>
 				</div>
 			</div>
