Added blog pages

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<ul class="nav-links font-poppins">
 				<li class="nav-item active"><a href="index.html">Home</a></li>
 				<li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-				<li class="nav-item"><a href="#">Blog</a></li>
-				<li class="nav-item"><a href="#">Contact</a></li>
+				<li class="nav-item"><a href="blog.html">Blog</a></li>
+				<li class="nav-item"><a href="contact.html">Contact</a></li>
 			</ul>
 
 			<!-- Burger icon for mobile -->
@@ -78,7 +78,7 @@
 							<div class="additional font-rubik">
 								<h3>Check out my latest blog!</h3>
 								<p>My journey to Gran Canaria</p>
-								<a href="#">Read More</a>
+								<a href="blogs/gran-canaria/gran-canaria-blog.html">Read More</a>
 							</div>
 						</div>
 						<!-- Blog #2 -->
