--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
 			<ul class="nav-links font-poppins">
 				<li class="nav-item"><a href="index.html">Home</a></li>
 				<li class="nav-item active"><a href="portfolio.html">Portfolio</a></li>
-				<li class="nav-item"><a href="#">Blog</a></li>
-				<li class="nav-item"><a href="#">Contact</a></li>
+				<li class="nav-item"><a href="blog.html">Blog</a></li>
+				<li class="nav-item"><a href="contact.html">Contact</a></li>
 			</ul>
 
 			<!-- Burger icon for mobile -->
