Added contacts page

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
 			<ul class="nav-links font-poppins">
 				<li class="nav-item"><a href="index.html">Home</a></li>
 				<li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-				<li class="nav-item active"><a href="blog.html">Blog</a></li>
-				<li class="nav-item"><a href="contact.html">Contact</a></li>
+				<li class="nav-item"><a href="blog.html">Blog</a></li>
+				<li class="nav-item active"><a href="contact.html">Contact</a></li>
 			</ul>
 
 			<!-- Burger icon for mobile -->
@@ -42,46 +42,41 @@
 
 		<!-- Start of page title -->
 		<div class="title">
-			<h1 class="font-rubik">Blog</h1>
-			<p class="subtitle font-rubik">Just me and my experiences</p>
+			<h1 class="font-rubik">Contact me!</h1>
+			<p class="subtitle font-rubik">If you don't know, then get to know</p>
 		</div>
 		<!-- End of page title -->
 		<!-- Start of page content wrapper -->
 		<div class="content-wrapper">
-			<!-- Blog wrapper -->
-			<div class="blog-wrapper">
-				<div class="blog">
-					<div class="blog-text">
-						<div class="blog-info">
-							<div class="date font-poppins">Jan<br>1</div>
-							<div class="blog-title">
-								<h3 class="font-poppins"><a href="blogs/gran-canaria/gran-canaria-blog.html">The amazing Gran Canaria!</a></h3>
-								<p class="font-rubik">Post by Zygimantas Buvarskis</p>
-							</div>
-						</div>
+			<div class="contacts-container">
+				<div class="contacts-text">
+					<h3 class="font-poppins">Let's work together!</h3>
 
-						<p class="blog-intro font-poppins">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quam, laudantium nesciunt, commodi deserunt laboriosam dicta expedita aperiam odio labore dolores, corporis cum. Ratione veniam iure suscipit maxime expedita accusamus deserunt odit, ab repellat earum excepturi nemo, corrupti repellendus illum ea culpa reiciendis mollitia provident maiores dicta neque iusto! Sunt! <a href="blogs/gran-canaria/gran-canaria-blog.html">Read more!</a></p>
-					</div>
-					<div class="blog-img">
-					</div>
+					<p class="font-poppins">Whether you would like: my services for a project, sponsor IG content, or a copy of my resume, then I would love to hear from you. I'm available for local projects as well as potential employment opportunities. Use the details to inquire about rates and availability, or just to say hi.</p>
+
+					<p class="font-poppins">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil dicta, minima, animi voluptatem magnam corporis ab fugiat enim a dolorem necessitatibus libero facilis mollitia facere. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, modi.</p>
+
+					<h3 class="font-poppins" style="margin-bottom: 5px">Zygimantas Buvarskis</h3>
+					<p class="font-poppins">// London<br>// Buvarskis@gmail.com<br>// +1920486124</p>
+
+					<p class="font-poppins">Or just use the contact form to get in touch!</p>
 				</div>
-			</div>
-			<!-- Blog wrapper -->
-			<div class="blog-wrapper">
-				<div class="blog">
-					<div class="blog-text">
-						<div class="blog-info">
-							<div class="date font-poppins">Jan<br>1</div>
-							<div class="blog-title">
-								<h3 class="font-poppins"><a href="blogs/gran-canaria/gran-canaria-blog.html">The amazing Gran Canaria!</a></h3>
-								<p class="font-rubik">Post by Zygimantas Buvarskis</p>
-							</div>
-						</div>
+				<div class="contacts-form">
+					<form class="form" action="contactform.php" method="post">
+						<p class="form-title font-poppins">Full name</p>
+						<input class="font-poppins" type="text" name="name" placeholder="Please enter your full name" autocomplete="off" spellcheck="false">
 
-						<p class="blog-intro font-poppins">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quam, laudantium nesciunt, commodi deserunt laboriosam dicta expedita aperiam odio labore dolores, corporis cum. Ratione veniam iure suscipit maxime expedita accusamus deserunt odit, ab repellat earum excepturi nemo, corrupti repellendus illum ea culpa reiciendis mollitia provident maiores dicta neque iusto! Sunt! <a href="blogs/gran-canaria/gran-canaria-blog.html">Read more!</a></p>
-					</div>
-					<div class="blog-img">
-					</div>
+						<p class="form-title font-poppins">Your email</p>
+						<input class="font-poppins" type="text" name="mail" placeholder="Please enter your email" autocomplete="off" spellcheck="false">
+
+						<p class="form-title font-poppins">Subject</p>
+						<input class="font-poppins" type="text" name="subject" placeholder="Topic of the email" autocomplete="off" spellcheck="false">
+
+						<p class="form-title font-poppins">Message</p>
+						<textarea class="font-poppins" name="message" placeholder="What's your question?" autocomplete="off"></textarea>
+
+						<button class="font-poppins btn-submit" type="submit" name="submit">SEND MAIL</button>
+					</form>
 				</div>
 			</div>
 		</div>
