--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 	<div class="footer">
 		<div class="social-media-wrapper">
 			<h3 class="font-rubik">My Socials</h3>
-			<a href="#" title="Instagram"><i class="fab fa-instagram soc-media"></i></a>
-			<a href="#" title="Facebook"><i class="fab fa-facebook-f soc-media"></i></a>
-			<a href="#" title="LinkedIn"><i class="fab fa-linkedin-in soc-media"></i></a>
-			<a href="#" title="YouTube"><i class="fab fa-youtube soc-media"></i></a>
+			<a href="https://www.instagram.com/zygibu/" target="_blank" title="Instagram"><i class="fab fa-instagram soc-media"></i></a>
+			<a href="https://www.facebook.com/zygimantas.buvarskis" target="_blank" title="Facebook"><i class="fab fa-facebook-f soc-media"></i></a>
+			<a href="https://www.linkedin.com/in/zygi-buvarskis/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in soc-media"></i></a>
+			<a href="https://www.youtube.com/channel/UCzyhk1tP_uXPsLEyW9vueug" target="_blank" title="YouTube"><i class="fab fa-youtube soc-media"></i></a>
 		</div>
 	</div>
 	<!-- End of footer -->
