--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 						<p class="form-title font-poppins">Message</p>
 						<textarea class="font-poppins" name="message" placeholder="What's your question?" autocomplete="off"></textarea>
 
-						<button class="font-poppins btn-submit" type="submit" name="submit">SEND MAIL</button>
+						<button class="font-poppins btn-submit" type="submit" name="submit">SEND EMAIL</button>
 					</form>
 				</div>
 			</div>
