--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<!-- Column 1: A little about me -->
 					<div class="info-col1">
 						<h3 class="font-rubik info-h3">Interested in what you've seen? Check out more!</h3>
-						<a href="#" class="portfolio-button font-poppins">Portfolio</a>
+						<a href="portfolio.html" class="portfolio-button font-poppins">Portfolio</a>
 					</div>
 					<!-- Column 2: Link to portfolio -->
 					<div class="info-col2">
